--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -46,21 +46,21 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/portfolio-details-1.png"
+                      src="assets/img/portfolio/portfolio-details-3.png"
                       alt="" />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/portfolio-details-2.png"
+                      src="assets/img/portfolio/portfolio-details-4.png"
                       alt="" />
                   </div>
 
-                  <!-- <div class="swiper-slide">
+                  <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/portfolio-details-3.png"
+                      src="assets/img/portfolio/portfolio-details-5.png"
                       alt="" />
-                  </div> -->
+                  </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
@@ -70,9 +70,9 @@
               <div class="portfolio-info">
                 <h3>Project information</h3>
                 <ul>
-                  <li><strong>Category :</strong> Android App</li>
+                  <li><strong>Category</strong>: Mobile App</li>
                   <!-- <li><strong>Client</strong>: ASU Company</li> -->
-                  <li><strong>Project date :</strong> 10 January, 2024</li>
+                  <li><strong>Project date</strong>: 17 Feb, 2024</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
@@ -80,13 +80,13 @@
                 </ul>
               </div>
               <div class="portfolio-description">
-                <h2>First Company Project</h2>
+                <h2>Second Company Project</h2>
                 <p>
-                  This my first company project. In this project i developed all
-                  user interface aspects for the first time and managed
-                  everything under specific period of time. LoadMate is Cargo
-                  platform where customers can hire trucks & drivers with few
-                  clicks.
+                  This my 2nd Project from the company. I developed all aspects
+                  for user-interface and used redux state managment for managign
+                  user info. It is furniture store, Where customers can purchase
+                  diffterent tpye of furniture of there choice for there
+                  house-hold and office etc.
                 </p>
               </div>
             </div>
