--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -45,14 +45,12 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/portfolio-details-1.png"
-                      alt="" />
+                    <img src="assets/img/portfolio/portfolio-4.png" alt="" />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/portfolio-details-2.png"
+                      src="assets/img/portfolio/protfolio-details-8.png"
                       alt="" />
                   </div>
 
@@ -70,9 +68,9 @@
               <div class="portfolio-info">
                 <h3>Project information</h3>
                 <ul>
-                  <li><strong>Category :</strong> Android App</li>
+                  <li><strong>Category</strong>: Digital Clock</li>
                   <!-- <li><strong>Client</strong>: ASU Company</li> -->
-                  <li><strong>Project date :</strong> 10 January, 2024</li>
+                  <li><strong>Project date</strong>: 22 August, 2023</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
@@ -80,13 +78,12 @@
                 </ul>
               </div>
               <div class="portfolio-description">
-                <h2>First Company Project</h2>
+                <h2>Practice Project</h2>
                 <p>
-                  This my first company project. In this project i developed all
-                  user interface aspects for the first time and managed
-                  everything under specific period of time. LoadMate is Cargo
-                  platform where customers can hire trucks & drivers with few
-                  clicks.
+                  This my peronal project to enhance my skills and practice
+                  frontend. It gets time from the device and display it on
+                  screen. I added both Dark and Light theme to make it look
+                  better.
                 </p>
               </div>
             </div>
