--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -45,22 +45,20 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
+                    <img src="assets/img/portfolio/portfolio-3.png" alt="" />
+                  </div>
+
+                  <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/portfolio-details-1.png"
+                      src="assets/img/portfolio/portfolio-details-6.png"
                       alt="" />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/portfolio-details-2.png"
+                      src="assets/img/portfolio/portfolio-details-7.png"
                       alt="" />
                   </div>
-
-                  <!-- <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/portfolio-details-3.png"
-                      alt="" />
-                  </div> -->
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
@@ -70,9 +68,9 @@
               <div class="portfolio-info">
                 <h3>Project information</h3>
                 <ul>
-                  <li><strong>Category :</strong> Android App</li>
+                  <li><strong>Category</strong>: Mobile Game</li>
                   <!-- <li><strong>Client</strong>: ASU Company</li> -->
-                  <li><strong>Project date :</strong> 10 January, 2024</li>
+                  <li><strong>Project date</strong>: 02 March, 2024</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
@@ -80,13 +78,12 @@
                 </ul>
               </div>
               <div class="portfolio-description">
-                <h2>First Company Project</h2>
+                <h2>Personal Project</h2>
                 <p>
-                  This my first company project. In this project i developed all
-                  user interface aspects for the first time and managed
-                  everything under specific period of time. LoadMate is Cargo
-                  platform where customers can hire trucks & drivers with few
-                  clicks.
+                  It is my personal project that i made during my intership, In
+                  this game player can compete with there friends or can play
+                  against Ai. To win player have to complete a diagonal by
+                  marking on board.
                 </p>
               </div>
             </div>
