--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -45,22 +45,20 @@
               <div class="portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
+                    <img src="assets/img/portfolio/portfolio-5.png" alt="" />
+                  </div>
+
+                  <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/portfolio-details-1.png"
+                      src="assets/img/portfolio/portfolio-details-9.png"
                       alt="" />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/portfolio-details-2.png"
+                      src="assets/img/portfolio/portfolio-details-10.png"
                       alt="" />
                   </div>
-
-                  <!-- <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/portfolio-details-3.png"
-                      alt="" />
-                  </div> -->
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
@@ -70,9 +68,9 @@
               <div class="portfolio-info">
                 <h3>Project information</h3>
                 <ul>
-                  <li><strong>Category :</strong> Android App</li>
+                  <li><strong>Category</strong>: Web design</li>
                   <!-- <li><strong>Client</strong>: ASU Company</li> -->
-                  <li><strong>Project date :</strong> 10 January, 2024</li>
+                  <li><strong>Project date</strong>: 12 June, 2023</li>
                   <!-- <li>
                     <strong>Project URL</strong>:
                     <a href="#">www.example.com</a>
@@ -80,13 +78,11 @@
                 </ul>
               </div>
               <div class="portfolio-description">
-                <h2>First Company Project</h2>
+                <h2>Practice Project</h2>
                 <p>
-                  This my first company project. In this project i developed all
-                  user interface aspects for the first time and managed
-                  everything under specific period of time. LoadMate is Cargo
-                  platform where customers can hire trucks & drivers with few
-                  clicks.
+                  This is my first frontend project. I worked on its design and
+                  responsivness. It is my first responsive project. I learned
+                  breakpoints and media queries by developing this project.
                 </p>
               </div>
             </div>
