--- a/index.html
+++ b/index.html
@@ -927,7 +927,10 @@
                   <i class="bx bx-arch"></i>
                 </div>
                 <h4><a href="">Travel</a></h4>
-                <p>Interested in traveling around the world!</p>
+                <p>
+                  Interested in traveling around the world! Would like to join
+                  people around the world.
+                </p>
               </div>
             </div>
           </div>
